--- a/style.css
+++ b/style.css
@@ -17,4 +17,12 @@ body{
 
     .chama-texto {
         margin-right: 5%;
+    img {
+        height: 200px;
+    }
+    categoria-videos{
+        display: flex;
+        overflow-x: auto;
+        gap: 10px;
+    }
     }
