--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body{
         padding-top: 80px;
         display: flex;
         justify-content: center;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 
     div {
@@ -17,9 +19,8 @@ body{
 
     .chama-texto {
         margin-right: 5%;
-    img {
-        height: 20px;
     }
+    
     categoria-videos{
         display: flex;
         overflow-x: auto;
