--- a/style.css
+++ b/style.css
@@ -3,15 +3,19 @@ body{
     background-color: black;
     }
 
-    section {
+    .chamada {
         background: rgb(184, 156, 213);
         padding-bottom: 80px;
         padding-top: 80px;
         display: flex;
         justify-content: center;
+       
+    }
+
+    .categoria {
         padding-left: 20px;
         padding-right: 20px;
-    }
+    } 
 
     div {
         margin-right: 20px;
