--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     color: white;
     background-color: black;
-    font-family: "Chakra-Petch"sans-serif;
+    font-family: "Chakra Petch"sans-serif;
     }
 
     .chamada {
