--- a/style.css
+++ b/style.css
@@ -35,3 +35,11 @@ body{
     img {
         height: 200px;
     }
+
+    h1 {
+        font-size: 30px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
